javascript-chat-sdk_versioned_docs/version-3.0/03-Authentication/index.md
---
sidebar_position: 3
title: Authentication
slug: /authentication
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Create User

Before you login the user, you must add the user to CometChat.

1. **For proof of concept/MVPs**: Create the user using the [CometChat Dashboard](https://app.cometchat.com).
2. **For production apps**: Use the CometChat [Create User API](https://api-explorer.cometchat.com/reference/creates-user) to create the user when your user signs up in your app.

:::info Sample Users
 We have setup 5 users for testing having UIDs:  `cometchat-uid-1`, `cometchat-uid-2`, `cometchat-uid-3`, `cometchat-uid-4` and `cometchat-uid-5`.
:::

Once initialization is successful, you will need to log the user into CometChat using the `login()` method.

We recommend you call the CometChat login method once your user logs into your app. The `login()` method needs to be called only once.

:::warning Important
 The CometChat SDK maintains the session of the logged in user within the SDK. Thus you do not need to call the login method for every session. You can use the CometChat.getLoggedinUser() method to check if there is any existing session in the SDK. This method should return the details of the logged-in user. If this method returns null, it implies there is no session present within the SDK and you need to log the user into ComeChat.
:::

## Login using Auth Key

This simple authentication procedure is useful when you are in development or if you do not require additional security.

<Tabs>
<TabItem value="Javascript" label="Javascript">

  ```javascript
var UID = "UID";
var authKey = "AUTH_KEY";

CometChat.getLoggedinUser().then(
	user => {
  	if(!user){
			CometChat.login(UID, authKey).then(
        user => {
          console.log("Login Successful:", { user });
        }, error => {
          console.log("Login failed with exception:", { error });
        }
      );
    }
	}, error => {
		console.log("Something went wrong", error);
	}
);
  ```
</TabItem>
<TabItem value="Typescript" label="Typescript">

  ```typescript
var UID: string = "cometchat-uid-1",
		authKey: string = "AUTH_KEY";

CometChat.getLoggedinUser().then(
    (user: CometChat.User) => {
			if(!user){
      	CometChat.login(UID, authKey).then(
					(user: CometChat.User) => {
						console.log("Login Successful:", { user });
					}, (error: CometChat.CometChatException) => {
						console.log("Login failed with exception:", { error });
					}
      	);
			}
    }, (error: CometChat.CometChatException) => {
			console.log("Some Error Occured", { error });
    }
);
  ```
</TabItem>
</Tabs>


| Parameters | Description |
| ---- | ---- |
| UID | The UID of the user that you would like to login |
| authKey | CometChat Auth Key |


After the user logs in, their information is returned in the `User`  object on `Promise` resolved.

:::danger
 Be sure to use the **Auth Key** and not the **Rest API Key**. This ensures that even if a malicious user reverse engineers your client code, they will only be able to log in to CometChat and not call any other APIs.
:::

## Login using Auth Token

This advanced authentication procedure does not use the Auth Key directly in your client code and thus ensuring that your Auth Key is not leaked even if the client code is reverse engineered.

1. [Create a User](https://api-explorer.cometchat.com/reference/creates-user) via the CometChat API when the user signs up in your app.
2. [Create an Auth Token](https://api-explorer.cometchat.com/reference/create-authtoken) via the CometChat API for the new user and save the token in your database.
3. Load the Auth Token in your client and pass it to the `login()` method.

<Tabs>
<TabItem value="Javascript" label="Javascript">

  ```javascript
var authToken = "AUTH_TOKEN";

CometChat.getLoggedinUser().then(
	user => {
  	if(!user){
			CometChat.login(authToken).then(
        user => {
          console.log("Login Successful:", { user });
        }, error => {
          console.log("Login failed with exception:", { error });
        }
      );
    }
	}, error => {
		console.log("Something went wrong", error);
	}
);
  ```
</TabItem>
<TabItem value="Typescript" label="Typescript">

  ```typescript
var authToken: string = "AUTH_TOKEN";

CometChat.getLoggedinUser().then(
    (user: CometChat.User) => {
        if (!user) {
            CometChat.login(authToken).then(
                (user: CometChat.User) => {
                    console.log("Login Successful:", { user });
                }, (error: CometChat.CometChatException) => {
                    console.log("Login failed with exception:", { error });
                }
            );
        }
    }, (error: CometChat.CometChatException) => {
        console.log("Some Error Occured", { error });
    }
);
  ```
</TabItem>
</Tabs>



| Parameter | Description |
| ---- | ---- |
| authToken | Auth Token of the user you would like to login |


After the user logs in, their information is returned in the `User`  object on the `Promise` resolved.

## Logout

You can use the `logout()` method to log out the user from CometChat. We suggest you call this method once your user has been successfully logged out from your app.

<Tabs>
<TabItem value="Javascript" label="Javascript">

  ```javascript
CometChat.logout().then(
	() => {
  	console.log("Logout completed successfully");
	},error=>{
  	console.log("Logout failed with exception:",{error});
	}
);
  ```
</TabItem>
<TabItem value="Typescript" label="Typescript">

  ```typescript
CometChat.logout().then(
    (loggedOut: Object) => {
        console.log("Logout completed successfully");
    }, (error: CometChat.CometChatException) => {
        console.log("Logout failed with exception:", { error });
    }
);
  ```
</TabItem>
</Tabs>
